# Cpp_Inference_CRN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Layer_BatchNorm2d.h  Layer_Conv2d.h  Layer_LSTM.h  Layer_TransposedConv2d.h  Model_CRN.h  NonLinearity.h  STFT.h  Wav_File.h
main/: Layer_BatchNorm2d.cpp  Layer_Conv2d.cpp  Layer_LSTM.cpp  Layer_TransposedConv2d.cpp  Model_CRN.cpp  NonLinearity.cpp  STFT.cpp  Wav_File.cpp
